Changed Date into OffsetDateTime, got rid of remember Token logic for now